--- a/config/fd_align.yaml
+++ b/config/fd_align.yaml
@@ -4,7 +4,7 @@ includes:
   - headers/misc.yaml
   - headers/model.yaml
   - headers/optimizer.yaml
-  - classifiers/Proto.yaml
+  - classifiers/fd_align.yaml
   - backbones/clip_vit.yaml
 
 
@@ -15,6 +15,7 @@ query_num: 15
 episode_size: 1
 train_episode: 100
 test_episode: 100
+n_gpu: 1
 
 backbone:
   name: clip_vit32
