--- a/config/fd_align.yaml
+++ b/config/fd_align.yaml
@@ -13,3 +13,6 @@ backbone:
 classifier:
   name: CLIP_context
   kwargs:
+    train_batch_size_per_gpu: 4
+    val_batch_size_per_gpu: 8
+    test_batch_size_per_gpu: 8
