--- a/config/headers/data.yaml
+++ b/config/headers/data.yaml
@@ -1,4 +1,5 @@
-data_root: ../data/libfewshot/miniImageNet--ravi
+# data_root: ../data/libfewshot/miniImageNet--ravi
+data_root: ../data/libfewshot/WebCaricature
 image_size: 224
 use_memory: False
 augment: True
